# 4x_caption

./: .gitignore  main.py  metaformat.json  pyproject.toml  requirements.txt
gen_ist/: gen_sft_data.py
gen_ist/prompt_cn/: VQA.py  conversation.py  image_caption.py  object_detection.py  visual_grounding.py
gen_ist/prompt_en/: VQA.py  conversation.py  image_caption.py  object_detection.py  visual_grounding.py
meta_caption/: gemini_handler.py  main.py  main_vllm.py  openai_handler.py  update_gemini.py  update_openai.py  update_vllm.py  vllm_handler.py
meta_caption/prompt/: prompt.py  utils.py
meta_caption/utils/: tif2rgb.py  viz.py
